--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -19,10 +19,8 @@
     </ul> 
     <p>{{ post.text }}</p>
   </article>
-  <hr>
+  {% if not forloop.last %}<hr>{% endif %}
 {% endfor %}
-    
-  <!-- под последним постом нет линии НЕ ЗНАЮ КАК ЭТО СДЕЛАТЬ-->
   </div>  
 {%endblock%}
 
